--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "gh-pages": "^6.2.0",
     "globals": "^15.9.0",
+    "happy-dom": "^20.0.11",
     "jsdom": "^27.3.0",
     "vite": "^5.4.8",
     "vitest": "^1.6.0"
